--- a/index.html
+++ b/index.html
@@ -28,37 +28,237 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <p>Test your knowledge of Python edge cases!</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<h2><a id="user-content-instructions" class="anchor" href="#instructions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Instructions</h2>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>In each of the 10 snippets below, one or more values is missing (marked with <code>???</code>). In each case, answer Yes or No: is it possible to replace the <code>???</code> with something that will make the snippet into exactly what you would see if you entered the text into the interpreter?</p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>For a <em>real</em> challenge, try taking the quiz without using a Python interpreter to check your answers.</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<h2><a id="user-content-examples" class="anchor" href="#examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>Examples</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h3><a id="user-content-example-question-1" class="anchor" href="#example-question-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example question 1</h3>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<pre><code>&gt;&gt;&gt; x = ???
+&gt;&gt;&gt; x &lt; x
+True
+</code></pre>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<h3><a id="user-content-example-answer-1" class="anchor" href="#example-answer-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example answer 1</h3>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<p><strong>No.</strong> This snippet is impossible.</p>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<h3><a id="user-content-example-question-2" class="anchor" href="#example-question-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example question 2</h3>
+
+<pre><code>&gt;&gt;&gt; x, y = ???
+&gt;&gt;&gt; x + y == y + x
+False
+</code></pre>
+
+<h3><a id="user-content-example-answer-2" class="anchor" href="#example-answer-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example answer 2</h3>
+
+<p><strong>Yes.</strong> This snippet is possible.</p>
+
+<pre><code>&gt;&gt;&gt; x, y = [0], [1]
+&gt;&gt;&gt; x + y == y + x
+False
+</code></pre>
+
+<h2><a id="user-content-details-and-scope" class="anchor" href="#details-and-scope" aria-hidden="true"><span class="octicon octicon-link"></span></a>Details and scope</h2>
+
+<p><strong>The missing values in this quiz are limited to the built-in types <code>bool</code>, <code>int</code>, <code>list</code>, <code>tuple</code>, <code>dict</code>, <code>set</code>, <code>frozenset</code>, <code>str</code>, and <code>NoneType</code>, and values of these types.</strong></p>
+
+<p>In particular, the following are out of scope, and are not valid as missing values:</p>
+
+<ul>
+<li>user-defined classes</li>
+<li><code>lambda</code>s</li>
+<li>anything using <code>globals</code> or <code>locals</code></li>
+<li>anything using <code>import</code></li>
+<li>anything that changes value just by inspecting it or iterating over it (iterators and generators)</li>
+<li>expressions with side effects (e.g. <code>eval</code>), including anything that redefines built-ins (obviously)</li>
+<li><code>bytes</code> arrays, <code>buffer</code>s, <code>range</code>s, <code>memoryview</code>s, and dictionary views</li>
+<li><code>float</code>s and unicode, which have enough edge cases in any language. This means that <code>nan</code> and <code>inf</code> are also out of scope. Strings, if they appear, only have ascii characters.</li>
+</ul>
+
+<p>These are not trick questions. For snippets whose answers are <em>Yes, this is possible</em>, the missing values will clearly be in scope.</p>
+
+<p>Assume the latest Python version (currently 3.5) if it matters. It shouldn't, though.</p>
+
+<h2><a id="user-content-the-questions" class="anchor" href="#the-questions" aria-hidden="true"><span class="octicon octicon-link"></span></a>The questions</h2>
+
+<p>Make sure to write down your answers (Yes or No) <em>before</em> looking at the answers, so you're not tempted to cheat. Good luck!</p>
+
+<h3><a id="user-content-question-1-max-vs-slice" class="anchor" href="#question-1-max-vs-slice" aria-hidden="true"><span class="octicon octicon-link"></span></a>Question 1: <code>max</code> vs slice</h3>
+
+<pre><code>&gt;&gt;&gt; x, a, b, c = ???
+&gt;&gt;&gt; max(x) &lt; max(x[a:b:c])
+True
+</code></pre>
+
+<input type="radio" class="answer" name="q1" value="yes">Yes <input type="radio" class="answer" name="q1" value="no">No
+
+<div class="hidden">
+  <p><strong>No.</strong> This snippet is impossible.</p>
+</div>
+
+<h3><a id="user-content-question-2-min-of-two-elements" class="anchor" href="#question-2-min-of-two-elements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Question 2: <code>min</code> of two elements</h3>
+
+<pre><code>&gt;&gt;&gt; x, y = ???
+&gt;&gt;&gt; min(x, y) == min(y, x)
+False
+</code></pre>
+
+<div class="hidden">
+  <p><strong>Yes.</strong> This snippet is possible.</p>
+  <pre><code>&gt;&gt;&gt; x, y = {0}, {1}
+&gt;&gt;&gt; min(x, y) == min(y, x)
+False
+</code></pre>
+</div>
+
+<input type="radio" class="answer" name="q2" value="yes">Yes <input type="radio" class="answer" name="q2" value="no">No
+
+<h3><a id="user-content-question-3-any-vs-addition" class="anchor" href="#question-3-any-vs-addition" aria-hidden="true"><span class="octicon octicon-link"></span></a>Question 3: <code>any</code> vs addition</h3>
+
+<pre><code>&gt;&gt;&gt; x, y = ???
+&gt;&gt;&gt; any(x) and not any(x + y)
+True
+</code></pre>
+
+<input type="radio" class="answer" name="q3" value="yes">Yes <input type="radio" class="answer" name="q3" value="no">No
+
+<div class="hidden">
+<p><strong>No.</strong> This snippet is impossible.</p>
+</div>
+
+<h3><a id="user-content-question-4-count-vs-len" class="anchor" href="#question-4-count-vs-len" aria-hidden="true"><span class="octicon octicon-link"></span></a>Question 4: <code>count</code> vs <code>len</code></h3>
+
+<pre><code>&gt;&gt;&gt; x, y = ???
+&gt;&gt;&gt; x.count(y) &lt;= len(x)
+False
+</code></pre>
+
+<input type="radio" class="answer" name="q4" value="yes">Yes <input type="radio" class="answer" name="q4" value="no">No
+
+<div class="hidden">
+  <p><strong>Yes.</strong> This snippet is possible.</p>
+  <pre><code>&gt;&gt;&gt; x, y = "a", ""
+&gt;&gt;&gt; x.count(y) &lt;= len(x)
+False
+</code></pre>
+</div>
+
+<h3><a id="user-content-question-5-associative-multiplication" class="anchor" href="#question-5-associative-multiplication" aria-hidden="true"><span class="octicon octicon-link"></span></a>Question 5: Associative multiplication</h3>
+
+<pre><code>&gt;&gt;&gt; x, y, z = ???
+&gt;&gt;&gt; x * (y * z) == (x * y) * z
+False
+</code></pre>
+
+<input type="radio" class="answer" name="q5" value="yes">Yes <input type="radio" class="answer" name="q5" value="no">No
+
+<div class="hidden">
+  <p><strong>Yes.</strong> This snippet is possible.</p>
+</div>
+
+<h3><a id="user-content-question-6-zip-vs-comparison" class="anchor" href="#question-6-zip-vs-comparison" aria-hidden="true"><span class="octicon octicon-link"></span></a>Question 6: <code>zip</code> vs comparison</h3>
+
+<pre><code>&gt;&gt;&gt; x, y = ???
+&gt;&gt;&gt; x &lt; y and all(a &gt;= b for a, b in zip(x, y))
+True
+</code></pre>
+
+<input type="radio" class="answer" name="q6" value="yes">Yes <input type="radio" class="answer" name="q6" value="no">No
+
+<div class="hidden">
+  <p><strong>Yes.</strong> This snippet is possible.</p>
+  <pre><code>&gt;&gt;&gt; x, y = [], [0]
+&gt;&gt;&gt; x &lt; y and all(a &gt;= b for a, b in zip(x, y))
+True
+</code></pre>
+</div>
+
+<h3><a id="user-content-question-7-size-of-sets-and-lists" class="anchor" href="#question-7-size-of-sets-and-lists" aria-hidden="true"><span class="octicon octicon-link"></span></a>Question 7: size of sets and lists</h3>
+
+<pre><code>&gt;&gt;&gt; x = ???
+&gt;&gt;&gt; len(set(list(x))) == len(list(set(x)))
+False
+</code></pre>
+
+<input type="radio" class="answer" name="q7" value="yes">Yes <input type="radio" class="answer" name="q7" value="no">No
+
+<div class="hidden">
+  <p><strong>No.</strong> This snippet is impossible.</p>
+</div>
+
+<h3><a id="user-content-question-8-argument-expansion" class="anchor" href="#question-8-argument-expansion" aria-hidden="true"><span class="octicon octicon-link"></span></a>Question 8: argument expansion</h3>
+
+<pre><code>&gt;&gt;&gt; x = ???
+&gt;&gt;&gt; min(x) == min(*x)
+False
+</code></pre>
+
+<input type="radio" class="answer" name="q8" value="yes">Yes <input type="radio" class="answer" name="q8" value="no">No
+
+<div class="hidden">
+  <p><strong>Yes.</strong> This snippet is possible.</p>
+  <pre><code>&gt;&gt;&gt; x = [[0]]
+&gt;&gt;&gt; min(x) == min(*x)
+False
+</code></pre>
+</div>
+
+<h3><a id="user-content-question-9-zero-sum" class="anchor" href="#question-9-zero-sum" aria-hidden="true"><span class="octicon octicon-link"></span></a>Question 9: zero <code>sum</code></h3>
+
+<pre><code>&gt;&gt;&gt; x, y = ???
+&gt;&gt;&gt; sum(0 * x, y) == y
+False
+</code></pre>
+
+<input type="radio" class="answer" name="q9" value="yes">Yes <input type="radio" class="answer" name="q9" value="no">No
+
+<div class="hidden">
+  <p><strong>No.</strong> This snippet is impossible.</p>
+</div>
+
+<h3><a id="user-content-question-10-max-vs-in" class="anchor" href="#question-10-max-vs-in" aria-hidden="true"><span class="octicon octicon-link"></span></a>Question 10: <code>max</code> vs <code>in</code></h3>
+
+<pre><code>&gt;&gt;&gt; x, y = ???
+&gt;&gt;&gt; y &gt; max(x) and y in x
+True
+</code></pre>
+
+<input type="radio" class="answer" name="q10" value="yes">Yes <input type="radio" class="answer" name="q10" value="no">No
+
+<div class="hidden">
+  <p><strong>Yes.</strong> This snippet is possible.</p>
+  <pre><code>&gt;&gt;&gt; x, y = "aa", "aa"
+&gt;&gt;&gt; y &gt; max(x) and y in x
+True
+</code></pre>
+</div>
+
+<br>
+
+<button class="btn" id="submit" value="Check!">Check!</button>
+
+<div id="score"></div>
+
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/sebcagnon">sebcagnon</a></p>
+        <p>Quizz forked from <a href="https://github.com/cosmologicon/pywat">cosmologicon/pywat</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/checkAnswers.js"></script>
+    <!-- AddThis sharing tools -->
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52003d7d31efba2f" async="async"></script>
+
     
   </body>
 </html>
